<resources>
    <string name="app_name">Rock Paper Scissor</string>
    <string name="app_slogan">The battle of rocks, papers and scissors</string>

    <string name="home_game_search">New Game</string>
    <string name="home_game_computer">Play vs AI</string>

    <string name="text_prompt_pairing">Hold your phones close together</string>
    <string name="text_info_pairing">pairing...</string>

    <string name="text_move_rock">Rock</string>
    <string name="text_move_paper">Paper</string>
    <string name="text_move_scissor">Scissor</string>


    <string name="btn_text_cancel">Cancel</string>

    <string name="text_info_match_computer_found">Match against AI started.</string>

    <string name="str_outcome_text">You (%1$s) %2$s against %3$s</string>
    <string name="str_outcome_victory">won</string>
    <string name="str_outcome_defeat">lost</string>
    <string name="str_outcome_draw">tied</string>

    <string name="btn_text_game_end">End game</string>
    <string name="btn_text_game_rematch">Rematch</string>

    <string name="text_game_cta">Waiting for your move...</string>
</resources>