<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activites.GameActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="horizontal"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/btn_play_rock"
            android:layout_width="fill_parent"
            android:layout_height="86dp"
            android:layout_weight="1"
            android:text="@string/text_move_rock" />

        <Button
            android:id="@+id/btn_play_paper"
            android:layout_width="fill_parent"
            android:layout_height="86dp"
            android:layout_weight="1"
            android:text="@string/text_move_paper" />

        <Button
            android:id="@+id/btn_play_scissor"
            android:layout_width="fill_parent"
            android:layout_height="86dp"
            android:layout_weight="1"
            android:text="@string/text_move_scissor" />
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="300dp"
        android:layout_marginEnd="130dp"
        android:text="@string/text_game_cta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>